--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
-    "aws-amplify": "^6.13.6"
+    "@aws-amplify/ui-react": "^6.9.5",
+    "aws-amplify": "^6.14.0"
   }
 }
